Estilos de buscador principal y desplegable de resultados

--- a/src/styles/blocks/_badges.scss
+++ b/src/styles/blocks/_badges.scss
@@ -41,16 +41,19 @@
             margin-left: 3px;
         }
     }
-
+    &--basic{
+        background-color: $brand-ligthen;
+        color: $brand-darken;
+    }
     &--recipe,
     &--collection {
-        background-color: $brand;
-        color: #fff;
+        background-color: $brand-ligthen;
+        color: $brand-darken;
     }
 
     &--plan {
-        background-color: $secondary-brand;
-        color: #fff;
+        background-color: $secondary-brand-ligthen;
+        color: $secondary-brand-darken;
     }
 
     &--premium {
