--- a/src/styles/blocks/_banner.scss
+++ b/src/styles/blocks/_banner.scss
@@ -14,7 +14,7 @@
 
 //Basics banner block
 .banner {
-    height: 370px;
+    height: 40vh;
     border-radius: $border-radius;
     overflow: hidden;
     position: relative;
