--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -4,7 +4,7 @@
     background-color: $brand-ligther;
     display: grid;
     @extend %basic-grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr auto 1fr;
     @include justify-content(center);
     @include align-items(center);
     position: relative;
@@ -15,20 +15,27 @@
     }
 
     @include respond-below(xs) {
-        height: 75vh;
+        height: 70vh;
         min-height: 375px;
     }
-
+    &_block{
+        grid-column-start: 2;
+        max-width: 800px;
+        margin: 0 auto;
+        grid-row-start: 2;
+    }
     &_img {
         position: absolute;
         max-width: 35vw;
 
         &--left {
-            left: -13vw;
+            left: -15vw;
+            bottom: 5vh;
         }
 
         &--right {
             right: -15vw;
+            bottom: 15vh;
         }
 
         @include respond-below(md) {
@@ -41,12 +48,12 @@
 
             &--left {
                 left: -45vw;
-                bottom: -5vh;
+                bottom: -10vh;
             }
 
             &--right {
                 right: -40vw;
-                bottom: 5vh;
+                bottom: 0vh;
             }
         }
     }
@@ -75,6 +82,12 @@
         margin-bottom: 15px;
         font-size: 4rem;
         line-height: 5rem;
+
+        @include respond-below(lg) {
+            font-size: 3rem;
+            line-height: 4rem;
+            margin-bottom: 10px;
+        }
 
         @include respond-below(md) {
             font-size: 3rem;
@@ -113,43 +126,13 @@
         grid-row-start: 3;
         position: relative;
         z-index: 8;
-        -webkit-transition: width, -webkit-transform 0.5s ease;
-        transition: width, -webkit-transform 0.5s ease;
-        transition: width, transform 0.5s ease;
-        transition: width, transform 0.5s ease, -webkit-transform 0.5s ease;
-
+        top: 0;
+        left: 0;
+        max-width: 900px;
+        transition: top, width 0.5s;
+        margin-top: 30px;
         &:target {
             display: none;
-        }
-
-        &.active {
-            position: fixed;
-            width: 100%;
-            z-index: 99;
-            -webkit-transform: translateY(-60vw);
-            transform: translateY(-60vw);
-
-            .search-cover_searchbox_input {
-                border-radius: 0 !important;
-            }
-        }
-
-        &_block {
-            @include flexbox;
-            @include align-items(center);
-            background-color: #fff;
-            border-radius: 50px;
-            max-width: 900px;
-            margin: 0 auto;
-            position: relative;
-
-            @include respond-below(md) {
-                max-width: 70vw;
-            }
-
-            @include respond-below(sm) {
-                max-width: 100vw;
-            }
         }
 
         &_input {
@@ -190,11 +173,93 @@
 
             &:focus,
             &active {
-                -webkit-box-shadow: 0 0px 50px 0 rgba($brand-darker, 0.7);
-                box-shadow: 0 0px 50px 0 rgba($brand-darker, 0.7);
                 outline: none;
             }
         }
+
+        &_results{
+            width: 100%;
+            border-radius: 0 0 10px 10px;
+            background-color: #fff;
+            position: absolute;
+            visibility: hidden;
+            opacity:0;
+            transition: opacity 0.3s;
+            @include respond-below(md){
+                box-shadow: 0 0 0 100vh rgba($gray-darken, 0.7);
+            }
+            &_item{
+                &:not(:last-child){
+                    border-bottom: 1px solid rgba($gray-ligthen,0.4);
+                }
+            }
+            &_link{
+                line-height: 60px;
+                text-decoration: none;
+                display: block;
+                text-align: left;
+                padding: 0 15px;
+                color: $gray-darken;
+                @include respond-above(md){
+                    text-align: center;
+                }
+                span{
+                    &:not(:last-child){
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+
+        &.active {
+            @include respond-below(md){
+                position: fixed;
+                width: 100%;
+                z-index: 99;
+                top: 0;
+                max-width:none;
+                margin-top: 0;
+            }
+            .search-cover_searchbox_results{
+                opacity: 1;
+                visibility: visible;
+            }
+            .search-cover_searchbox_block{
+                z-index: 9;
+                box-shadow: none;
+                border-radius: 35px 35px 0 0;
+                @include respond-below(md){
+                    border-radius: 0;
+                }
+            }
+            .search-cover_searchbox_input{
+                box-shadow: none;
+                background-color: rgba($gray-ligthen, 0.4);
+                @include respond-below(md){
+                    border-radius: 50px;
+                    line-height: 50px;
+                }
+            }
+        }
+
+        &_block {
+            @include flexbox;
+            @include align-items(center);
+            background-color: #fff;
+            border-radius: 50px;
+            margin: 0 auto;
+            position: relative;
+            transition: border-radius 0.2s;
+
+            @include respond-below(md) {
+                max-width: 70vw;
+            }
+
+            @include respond-below(sm) {
+                max-width: 100vw;
+            }
+        }
+
 
         &_btn {
             @include flexbox;
