--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,8 +1,6 @@
 //Colors
 $body: #fff;
 
-$gradient-blue: #8ad2db;
-
 $brand-darken: #47615D;
 $brand-darker: #61938C;
 $brand: #6caea4;
@@ -24,3 +22,6 @@ $gray-ligthen: #E8E8E8;
 $alternative-yellow: #ede139;
 $alternative-blue: #3481d9;
 $alternative-red: #d93434;
+
+$gradient-blue: #8ad2db;
+$bg-search: rgba($gray-ligthen, 0.4);
