--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -142,7 +142,7 @@
             width: 100%;
             padding: 0 10px;
             background-color: #fff;
-            color: $gray;
+            color: $gray-darken;
             font-size: 1.5rem;
             text-align: center;
             font-weight: 100;
@@ -165,12 +165,15 @@
 
             @include respond-below(xs) {
                 font-size: 4vw;
-                line-height: 40px;
+                line-height: 60px;
                 padding: 0 10px;
+                background-color: $bg-search;
                 -webkit-box-shadow: 0 5px 30px 0 rgba(#000, 0.3);
                 box-shadow: 0 5px 30px 0 rgba(#000, 0.3);
             }
-
+            &::placeholder{
+                color: $gray;
+            }
             &:focus,
             &active {
                 outline: none;
@@ -234,10 +237,10 @@
             }
             .search-cover_searchbox_input{
                 box-shadow: none;
-                background-color: rgba($gray-ligthen, 0.4);
+                background-color: $bg-search;
                 @include respond-below(md){
                     border-radius: 50px;
-                    line-height: 50px;
+                    line-height: 60px;
                 }
             }
         }
@@ -274,11 +277,14 @@
             background-color: $secondary-brand;
             color: #fff;
             border-radius: 50%;
-
+            &:hover {
+                background-color: $secondary-brand-ligther;
+                border-color: $secondary-brand-ligther;
+            }
             @include respond-below(xs) {
-                width: 40px;
-                height: 40px;
-
+                width: 50px;
+                height: 50px;
+                right: 10px;
                 svg {
                     width: 15px;
                 }
