--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -43,7 +43,7 @@
         }
 
         @include respond-below(xs) {
-            grid-template-columns: 35px 1fr 1fr auto;
+            grid-template-columns: 50px 1fr 1fr auto;
         }
     }
 
@@ -93,15 +93,12 @@
             overflow: hidden;
             border-radius: 50%;
             right: 0;
-            left: 0;
             -webkit-transition: all 0.2s;
             transition: all 0.2s;
             opacity: 0;
-            top: 50%;
+            top: 0;
             margin: 0 auto;
             z-index: -1;
-            -webkit-transform: translateY(-50%);
-            transform: translateY(-50%);
 
             &::before {
                 content: "";
@@ -111,11 +108,11 @@
                 -webkit-transform-origin: center center;
                 transform-origin: center center;
                 position: absolute;
-                left: 0;
+                -webkit-transform-origin: right right;
+                transform-origin: right right;
+                position: absolute;
                 right: 0;
-                top: 50%;
-                -webkit-transform: translateY(-50%);
-                transform: translateY(-50%);
+                top: 0;
                 background-color: #fff;
                 -webkit-transition: all 1s;
                 transition: all 1s;
@@ -132,8 +129,8 @@
                 z-index: 99;
 
                 &::before {
-                    -webkit-transform: scale(30);
-                    transform: scale(30);
+                    -webkit-transform: scale(50);
+                    transform: scale(50);
                 }
 
                 ~.nav-mobilebtn {
@@ -265,17 +262,87 @@
 
 //Explore menu
 .explore-menu {
-    display: none;
+    @extend %basic-grid;
+    @include grid-col-startend(2, 2);
+    display: grid;
+    opacity: 0;
+    visibility: hidden;
     position: fixed;
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
     left: 0;
     top: 0;
-    background-color: #fff;
     -webkit-box-shadow: 0 10px 30px 0 rgba(#000, 0.04);
     box-shadow: 0 10px 30px 0 rgba(#000, 0.04);
     z-index: 99;
     border-radius: $border-radius;
-    @extend %basic-grid;
-    @include grid-col-startend(2, 2);
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+    &::before {
+        content: "";
+        border-radius: 0;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: left left;
+        transform-origin: left left;
+        position: absolute;
+        left: 0;
+        top: 0;
+        background-color: #fff;
+        -webkit-transition: all 1s;
+        transition: all 1s;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        border: 40px solid #fff;
+    }
+    &.opened{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        opacity: 1;
+        visibility: visible;
+        z-index: 99;
+        &::before {
+            -webkit-transform: scale3d(50,50,50);
+            transform: scale3d(50,50,50);
+            @include respond-above(sm){
+                -webkit-transform: scale3d(70,70,70);
+                transform: scale3d(70,70,70);
+            }
+        }
+    }
+    &_inner{
+        grid-column-start: 2;
+        grid-column-end: 3;
+        display: grid;
+        grid-template-rows: auto 1fr 1fr 1fr;
+        @include justify-content(flex-start);
+        position: relative;
+        z-index: 9;
+    }
+    &_title{
+        grid-row-start: 1;
+        padding: 20px 20px;
+        text-align: left;
+    }
+    &_results{
+        @include respond-above(sm) {
+            display: grid;
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-gap: 20px;
+            grid-template-columns: repeat(4, 1fr);
+            @include justify-content(center);
+        }
+
+        @include respond-below(lg) {
+            grid-template-columns: repeat(4, 1fr);
+        }
+
+        @include respond-below(md) {
+            grid-template-columns: repeat(3, 1fr);
+        }
+    }
 }
