--- a/src/styles/elements/_titles.scss
+++ b/src/styles/elements/_titles.scss
@@ -31,6 +31,27 @@ h6 {
     font-size: 16px;
 }
 
+.title-lg {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    font-weight: 600;
+
+    @include respond-below(lg) {
+        font-size: 1.2rem;
+        line-height: 1.7rem;
+    }
+
+    @include respond-below(sm) {
+        font-size: 1.3rem;
+        line-height: 1.7rem;
+    }
+
+    @include respond-below(xs) {
+        font-size: 1.2rem;
+        line-height: 1.7rem;
+        padding-right: 3vw;
+    }
+}
 .title-md {
     font-size: 1.3rem;
     line-height: 2rem;
