--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'css-reset-and-normalize/scss/reset-and-normalize.scss';
+@import 'aos/src/sass/aos.scss';
 @import 'slick-carousel/slick/slick.scss';
 
 
