--- a/src/styles/variables/_keyframes.scss
+++ b/src/styles/variables/_keyframes.scss
@@ -12,3 +12,15 @@
 %skeleton-animation{
     animation: pulse 1s infinite ease-in-out;
 }
+
+@keyframes showMenu {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(100);
+    }
+}
+%menu-animation{
+    animation: showMenu 1s forwards ease;
+}
