--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -25,3 +25,4 @@ $alternative-red: #d93434;
 
 $gradient-blue: #8ad2db;
 $bg-search: rgba($gray-ligthen, 0.4);
+$featured-section: rgba($gray-ligthen, 0.4);
