--- a/src/styles/blocks/_badges.scss
+++ b/src/styles/blocks/_badges.scss
@@ -24,7 +24,7 @@
         top: 10px;
         right: 10px;
         text-transform: uppercase;
-        padding: 3px 15px;
+        padding: 3px 10px;
         font-size: 1rem;
         line-height: 1.4rem;
         display: inline-block;
@@ -40,15 +40,36 @@
         svg {
             margin-left: 3px;
         }
+
+        &--recipe {
+            background-color: $brand;
+            color: #fff;
+        }
+
+        &--collection {
+            background-color: $alternative-blue;
+            color: #fff;
+        }
+
+        &--plan {
+            background-color: $secondary-brand;
+            color: #fff;
+        }
     }
-    &--basic{
+
+    &--basic {
         background-color: $brand-ligthen;
         color: $brand-darken;
     }
-    &--recipe,
+
+    &--recipe {
+        background-color: $brand-ligthen;
+        color: $brand-darken;
+    }
+
     &--collection {
-        background-color: $brand-ligthen;
-        color: $brand-darken;
+        background-color: $alternative-blue;
+        color: #fff;
     }
 
     &--plan {
