--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -82,6 +82,7 @@
     &_right-menu {
         @include justify-content(flex-end);
         margin-right: 30px;
+
         @media(max-width: 992px) {
             @include flexbox;
             @include flex-direction(column);
@@ -279,6 +280,7 @@
     border-radius: $border-radius;
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
+
     &::before {
         content: "";
         border-radius: 0;
@@ -297,52 +299,244 @@
         height: 40px;
         border: 40px solid #fff;
     }
-    &.opened{
+
+    &.opened {
         width: 100%;
         height: 100%;
         border-radius: 0;
         opacity: 1;
         visibility: visible;
         z-index: 99;
+
         &::before {
-            -webkit-transform: scale3d(50,50,50);
-            transform: scale3d(50,50,50);
-            @include respond-above(sm){
-                -webkit-transform: scale3d(70,70,70);
-                transform: scale3d(70,70,70);
+            -webkit-transform: scale3d(50, 50, 50);
+            transform: scale3d(50, 50, 50);
+
+            @include respond-above(sm) {
+                -webkit-transform: scale3d(70, 70, 70);
+                transform: scale3d(70, 70, 70);
             }
         }
     }
-    &_inner{
-        grid-column-start: 2;
-        grid-column-end: 3;
+
+    &_wrapper {
+        grid-column-start: 1;
+        grid-column-end: 4;
         display: grid;
+        overflow: auto;
+        width: 100%;
+    }
+
+    &_inner {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        display: grid;
+        @extend %basic-grid;
         grid-template-rows: auto 1fr 1fr 1fr;
         @include justify-content(flex-start);
         position: relative;
+        top: 50px;
         z-index: 9;
+        opacity: 0;
+        overflow: auto;
+        padding: 30px 0;
+
+        @include respond-above(sm) {
+            grid-column-start: 2;
+            grid-column-end: 3;
+            padding: 100px 0;
+        }
+
+        &.show-fade {
+            -webkit-animation: showFade 0.5s 0.5s forwards ease;
+            animation: showFade 0.5s 0.5s forwards ease;
+        }
+
+        ::-webkit-scrollbar {
+            width: 0px;
+            background: transparent;
+            /* make scrollbar transparent */
+        }
     }
-    &_title{
+
+    &_block-title {
+        @include flexbox;
+        @include flex-direction(row);
+        @include align-items(center);
+        @include justify-content(space-between);
+        grid-column-start: 1;
+        grid-column-end: 4;
         grid-row-start: 1;
-        padding: 20px 20px;
+        padding: 0px 20px 20px;
+        margin-bottom: 35px;
+        border-bottom: 3px solid $brand;
+
+        @include respond-above(sm) {
+            padding: 20px 0;
+            grid-column-start: 2;
+            grid-column-end: 3;
+        }
+
+        @include respond-below(sm) {
+            border: none;
+            margin-bottom: 25px;
+        }
+    }
+
+    &_close {
+        color: $gray-darken;
+    }
+
+    &_title {
         text-align: left;
     }
-    &_results{
+
+    &_results {
+        grid-column-start: 1;
+        grid-column-end: 4;
+
+        @include respond-above(sm) {
+            display: grid;
+            grid-column-start: 2;
+            grid-column-end: 3;
+            grid-gap: 20px;
+            grid-template-rows: 4, 1fr 1fr auto auto;
+            @include justify-content(center);
+        }
+    }
+
+    &_section {
         @include respond-above(sm) {
             display: grid;
             grid-column-start: 1;
             grid-column-end: 2;
             grid-gap: 20px;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: auto auto;
             @include justify-content(center);
         }
 
-        @include respond-below(lg) {
-            grid-template-columns: repeat(4, 1fr);
+
+        @include respond-below(sm) {
+            margin-bottom: 30px;
         }
 
-        @include respond-below(md) {
-            grid-template-columns: repeat(3, 1fr);
+        &_title {
+            grid-column-start: 1;
+            grid-column-end: 2;
+            text-align: left;
+            @include flexbox;
+            @include align-items(center);
+            @include justify-content(space-between);
+            padding: 0 20px;
+            position: relative;
+
+            @include respond-above(sm) {
+                display: grid;
+                grid-template-columns: auto auto;
+                padding: 0 0 10px;
+            }
+
+            @include respond-below(sm) {
+                margin-bottom: 10px;
+                @include flex-direction(column);
+                @include justify-content(flex-start);
+                @include align-items(flex-start);
+            }
+
+            &-line {
+                max-width: 80px;
+                margin-top: 15px;
+
+                @include respond-above(sm) {
+                    display: none;
+                }
+            }
+        }
+
+        &-list {
+            &:not(:last-child) {
+                margin-bottom: 40px;
+            }
+        }
+
+        &_categories {
+            margin-top: 30px;
+        }
+
+        &-results {
+            display: grid;
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start: 2;
+            grid-gap: 20px;
+            grid-template-columns: repeat(5, 1fr);
+
+            @include respond-below(xl) {
+                grid-template-columns: repeat(4, 1fr);
+            }
+
+            @include respond-below(lg) {
+                grid-template-columns: repeat(4, 1fr);
+            }
+
+            @include respond-below(md) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+
+        &-recipes {
+            @include respond-below(sm) {
+                padding-top: 30px;
+                background-color: $featured-section;
+            }
+        }
+    }
+
+    &_list {
+        @include flexbox;
+        @include flex-direction(row);
+        @include flex-wrap(wrap);
+        grid-column-start: 1;
+        grid-column-end: 7;
+        margin-top: 20px;
+        padding: 0 20px;
+
+        @include respond-above(sm) {
+            @include flex-direction(row);
+            @include flex-wrap(wrap);
+            padding: 0;
+        }
+
+        &::after {
+            content: "";
+            -webkit-box-flex: 1;
+            -ms-flex: auto;
+            flex: auto;
+        }
+
+        &_item {
+            margin-right: 10px;
+
+            @include respond-below(sm) {
+                margin-bottom: 10px;
+            }
+
+            &:not(:last-child) {
+                @include respond-above(sm) {
+                    margin-right: 15px;
+                }
+            }
+        }
+
+        &_link {
+            color: $brand;
+            text-decoration: none;
+        }
+    }
+
+    .link-seeall {
+        @include respond-below(sm) {
+            display: none;
         }
     }
 }
