--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -18,12 +18,14 @@
         height: 70vh;
         min-height: 375px;
     }
-    &_block{
+
+    &_block {
         grid-column-start: 2;
         max-width: 800px;
         margin: 0 auto;
         grid-row-start: 2;
     }
+
     &_img {
         position: absolute;
         max-width: 35vw;
@@ -31,11 +33,19 @@
         &--left {
             left: -15vw;
             bottom: 5vh;
+
+            @include respond-above(lg) {
+                left: -5vw;
+            }
         }
 
         &--right {
             right: -15vw;
             bottom: 15vh;
+
+            @include respond-above(lg) {
+                right: -8vw;
+            }
         }
 
         @include respond-below(md) {
@@ -66,6 +76,7 @@
         z-index: 97;
         max-width: 1200px;
         margin: 0 auto;
+        text-align: center;
 
         @include respond-below(md) {
             max-width: 100vw;
@@ -129,8 +140,10 @@
         top: 0;
         left: 0;
         max-width: 900px;
+        -webkit-transition: top, width 0.5s;
         transition: top, width 0.5s;
         margin-top: 30px;
+
         &:target {
             display: none;
         }
@@ -171,43 +184,60 @@
                 -webkit-box-shadow: 0 5px 30px 0 rgba(#000, 0.3);
                 box-shadow: 0 5px 30px 0 rgba(#000, 0.3);
             }
-            &::placeholder{
+
+            &::-webkit-input-placeholder {
                 color: $gray;
             }
+
+            &:-ms-input-placeholder {
+                color: $gray;
+            }
+
+            &::placeholder {
+                color: $gray;
+            }
+
             &:focus,
             &active {
                 outline: none;
             }
         }
 
-        &_results{
+        &_results {
             width: 100%;
             border-radius: 0 0 10px 10px;
             background-color: #fff;
             position: absolute;
             visibility: hidden;
-            opacity:0;
+            opacity: 0;
+            -webkit-transition: opacity 0.3s;
             transition: opacity 0.3s;
-            @include respond-below(md){
+
+            @include respond-below(md) {
+                -webkit-box-shadow: 0 0 0 100vh rgba($gray-darken, 0.7);
                 box-shadow: 0 0 0 100vh rgba($gray-darken, 0.7);
             }
-            &_item{
-                &:not(:last-child){
-                    border-bottom: 1px solid rgba($gray-ligthen,0.4);
+
+            &_item {
+                &:not(:last-child) {
+                    border-bottom: 1px solid rgba($gray-ligthen, 0.4);
                 }
             }
-            &_link{
+
+            &_link {
                 line-height: 60px;
                 text-decoration: none;
                 display: block;
                 text-align: left;
                 padding: 0 15px;
                 color: $gray-darken;
-                @include respond-above(md){
+
+                @include respond-above(md) {
                     text-align: center;
                 }
-                span{
-                    &:not(:last-child){
+
+                span {
+                    &:not(:last-child) {
                         margin-right: 5px;
                     }
                 }
@@ -215,30 +245,37 @@
         }
 
         &.active {
-            @include respond-below(md){
+            @include respond-below(md) {
                 position: fixed;
                 width: 100%;
                 z-index: 99;
                 top: 0;
-                max-width:none;
+                max-width: none;
                 margin-top: 0;
             }
-            .search-cover_searchbox_results{
+
+            .search-cover_searchbox_results {
                 opacity: 1;
                 visibility: visible;
             }
-            .search-cover_searchbox_block{
+
+            .search-cover_searchbox_block {
                 z-index: 9;
+                -webkit-box-shadow: none;
                 box-shadow: none;
                 border-radius: 35px 35px 0 0;
-                @include respond-below(md){
+
+                @include respond-below(md) {
                     border-radius: 0;
                 }
             }
-            .search-cover_searchbox_input{
+
+            .search-cover_searchbox_input {
+                -webkit-box-shadow: none;
                 box-shadow: none;
                 background-color: $bg-search;
-                @include respond-below(md){
+
+                @include respond-below(md) {
                     border-radius: 50px;
                     line-height: 60px;
                 }
@@ -252,6 +289,7 @@
             border-radius: 50px;
             margin: 0 auto;
             position: relative;
+            -webkit-transition: border-radius 0.2s;
             transition: border-radius 0.2s;
 
             @include respond-below(md) {
@@ -277,14 +315,17 @@
             background-color: $secondary-brand;
             color: #fff;
             border-radius: 50%;
+
             &:hover {
                 background-color: $secondary-brand-ligther;
                 border-color: $secondary-brand-ligther;
             }
+
             @include respond-below(xs) {
                 width: 50px;
                 height: 50px;
                 right: 10px;
+
                 svg {
                     width: 15px;
                 }
@@ -417,8 +458,12 @@
             grid-column-end: 2;
             grid-row-start: 2;
             grid-gap: 20px;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(6, 1fr);
             @include justify-content(center);
+        }
+
+        @include respond-below(xl) {
+            grid-template-columns: repeat(4, 1fr);
         }
 
         @include respond-below(lg) {
