--- a/src/styles/elements/_titles.scss
+++ b/src/styles/elements/_titles.scss
@@ -52,6 +52,7 @@ h6 {
         padding-right: 3vw;
     }
 }
+
 .title-md {
     font-size: 1.3rem;
     line-height: 2rem;
@@ -70,6 +71,28 @@ h6 {
     @include respond-below(xs) {
         font-size: 1rem;
         line-height: 1.5rem;
+        padding-right: 3vw;
+    }
+}
+
+.title-sm {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 600;
+
+    @include respond-below(lg) {
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
+    @include respond-below(sm) {
+        font-size: 0.9rem;
+        line-height: 1.2rem;
+    }
+
+    @include respond-below(xs) {
+        font-size: 0.9rem;
+        line-height: 1.2rem;
         padding-right: 3vw;
     }
 }
