--- a/src/styles/variables/_fonts.scss
+++ b/src/styles/variables/_fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700');
