--- a/src/styles/blocks/_banner.scss
+++ b/src/styles/blocks/_banner.scss
@@ -1,14 +1,25 @@
 //Banners wrapper
 .banners-block {
     display: grid;
-    grid-gap: 40px;
-    grid-template-columns: 1fr 1fr;
+    @extend %basic-grid;
     padding: 70px 0;
+    margin: 40px 0;
 
     @include respond-below(sm) {
-        padding: 2rem 0;
-        grid-template-columns: 1fr auto 1fr;
-        grid-gap: 20px;
+        padding: 1rem 0;
+        margin: 2rem 0;
+    }
+
+    &_inner {
+        @include grid-col-startend(2, 3);
+        display: grid;
+        grid-gap: 40px;
+
+        @include respond-below(sm) {
+            padding: 2rem 0;
+            grid-template-columns: 1fr auto 1fr;
+            grid-gap: 20px;
+        }
     }
 }
 
@@ -43,6 +54,7 @@
         top: 0;
         left: 0;
         right: 0;
+        -webkit-box-shadow: inset 0 0 0 200px rgba(#000, 0.6);
         box-shadow: inset 0 0 0 200px rgba(#000, 0.6);
         height: 100%;
     }
